BE: change Snippet to SnippetDto and use SnippetMapper.INSTANCE